@@ -19,6 +19,7 @@ package org.apache.solr.handler;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.update.AddUpdateCommand;
+import org.apache.solr.update.processor.BufferingRequestProcessor;
 import org.apache.solr.util.AbstractSolrTestCase;
 import java.io.StringReader;
 import java.util.Collection;
